infra/k8s/auth-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mysql
  template:
    metadata:
      labels:
        app: auth-mysql
    spec:
      containers:
        - name: auth-mysql
          image: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mysql-srv
spec:
  selector:
    app: auth-mysql
  ports:
    - name: auth-db
      protocol: TCP
      port: 27017
      targetPort: 27017
