infra/k8s/inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: vissiontec/inventory

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-srv
spec:
  selector:
    app: inventory
  ports:
    - name: inventory
      protocol: TCP
      port: 3002
      targetPort: 3002
