infra/k8s/sales-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sales-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      containers:
        - name: sales
          image: vissiontec/sales

---
apiVersion: v1
kind: Service
metadata:
  name: sales-srv
spec:
  selector:
    app: sales
  ports:
    - name: sales
      protocol: TCP
      port: 3001
      targetPort: 3001
