infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: vission.dev
      http: 
        paths:
          - path: /auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /sales/?(.*)
            backend: 
              serviceName: sales-srv
              servicePort: 3001
          - path: /purchase/?(.*)
            backend: 
              serviceName: purchase-srv
              servicePort: 3002
          - path: /dashboard/?(.*)
            backend: 
              serviceName: dashboard-srv
              servicePort: 3003
